<resources>
    <string name="app_name">AquaTech</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcomeText">Welcome</string>
    <string name="total_pumpsText">Total Pump/s</string>
    <string name="total_tanksText">Total Tank/s</string>
    <string name="total_householdsText">Total Households</string>
    <string name="active_householdsText">Active Households</string>
    <string name="inactive_householdsText">Inactive Households</string>
    <string name="unread_meterText">Unread Meter</string>
    <string name="read_meterText">Read Meter</string>
    <string name="water_consumptionText">Water Consumption</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="welcome_to_aquatech">Welcome to AQUATECH</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="admin_header">Admin</string>
    <string name="consumer_name">Consumer Name</string>
    <string name="consumerAddress">Aurelio Alivio Sr.St.Purok 5 ,Cubacub Mandaue City</string>
    <string name="consumer_s_details">Consumer\'s Details</string>
    <string name="account_number">Account Number:</string>
    <string name="meter_serial_number">Meter Serial Number:</string>
    <string name="pump_number">Pump Number:</string>
    <string name="email_address">Email Address:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="date_applied">Date Applied:</string>
    <string name="previous_water_consumption">Previous Water Consumption:</string>
    <string name="balance_payment">Balance Payment:</string>
    <string name="date_billed">Date Billed</string>
    <string name="this_is_your_bill">THIS IS YOUR BILL</string>
    <string name="meter_reader_image">Meter Reader Image:</string>
    <string name="bill_no">BILL NO:</string>
    <string name="meter_serial_no">Meter Serial No:</string>
    <string name="details">DETAILS:</string>
    <string name="current_charges">Current Charges:</string>
    <string name="address">Address:</string>
    <string name="present_reading">Present Reading:</string>
    <string name="meter_reader">Meter Reader:</string>
    <string name="previous_reading">Previous Reading:</string>
    <string name="billed_by">Billed By:</string>
    <string name="water_consumed">Water Consumed:</string>
    <string name="this_month_s_bill">This Month\'s Bill:</string>
    <string name="other_charges">Other Charges:</string>
    <string name="billing_period">Billing Period:</string>
    <string name="previous_bill">Previous Bill:</string>
    <string name="due_date">Due Date:</string>
    <string name="penalty">Penalty:</string>
    <string name="date_delivered">Date Delivered:</string>
    <string name="total_previous">Total Previous:</string>
    <string name="total_bill">Total Bill:</string>
    <string name="reconnection">Reconnection:</string>
    <string name="note">Pay this amount on or before due date to get discount and avoid penalty</string>
    <string name="search_serial_number_hint">Search Serial Number</string>
    <string name="employee_id">Employee ID:</string>
    <string name="username">Username:</string>
    <string name="create_account">Create Account</string>
    <string name="change_password">Change Password</string>
    <string name="roles">Roles</string>
    <string name="enter_your_username_hint">Enter your username</string>
    <string name="old_password">Old Password:</string>
    <string name="enter_your_old_password_hint">Enter your old password</string>
    <string name="new_password">New Password:</string>
    <string name="enter_your_new_password_hint">Enter your new password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="enter_your_confirm_password_hint">Enter your confirm password</string>
    <string name="enter_your_contact_number_hint">Enter your contact number</string>
    <string name="enter_your_email_address_hint">Enter your email address</string>
    <string name="enter_your_address_hint">Enter your address</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="enter_your_meter_serial_number_hint">Enter your meter serial number</string>
    <string name="password">Password:</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="meter_reader_header">Meter Reader</string>
    <string name="submit">Submit</string>
    <string name="water_meter_image">Water Meter Image:</string>
    <string name="water_consumption">Water Consumption:</string>
</resources>