<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAdmin"
    android:background="@drawable/fragment_box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/roles"/>

        <Spinner
            android:id="@+id/createAdminRolesSpinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/createAdminNameEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_name_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/address"/>

        <EditText
            android:id="@+id/createAdminAddressEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_address_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/contact_number"/>

        <EditText
            android:id="@+id/createAdminContactNumberEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_contact_number_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/email_address"/>

        <EditText
            android:id="@+id/createAdminEmailAddressEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_email_address_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/createAdminUsernameEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_username_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/createAdminPasswordEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_password_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/createAdminConfirmPasswordEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_confirm_password_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>
    </LinearLayout>
</FrameLayout>

