<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MChangePassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            android:background="@drawable/water_drop" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/fragmentBackgroundColor"/>

    <TextView
        android:layout_width="370dp"
        android:layout_height="370dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="260dp"
        android:background="@drawable/fragment_box"/>

    <TextView
        android:id="@+id/chatProfileNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:text="@string/consumer_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/chatProfilePictureImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/add_profile_icon"/>

    <TextView
        android:id="@+id/chatProfilePositionTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:text="@string/admin_header"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/profileEditChangePasswordButton"
        android:layout_width="180dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="600dp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:textStyle="bold"
        app:cornerRadius="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="280dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/changePasswordUsernameEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_username_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/old_password"/>

        <EditText
            android:id="@+id/changePasswordOldPasswordEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_old_password_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/changePasswordNewPasswordEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_new_password_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/changePasswordConfirmPasswordEditText"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/loginshape"
            android:hint="@string/enter_your_confirm_password_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

    </LinearLayout>
</FrameLayout>